# fuzzy-octo-invention

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  render.yaml
api/abc/: index.html
api/config/: index.html
api/engine/: index.html
api/errors/: index.html
api/rest/: index.html
api/types/: index.html
app/: __init__.py  cli.py  types.py  types.pyi
app/bloom/: __init__.py  filter.py
app/cache/: __init__.py  block.py
app/common/: __init__.py  abc.py  abc.pyi  errors.py  errors.pyi  merge_iterator.py  rwlock.py
app/compaction/: __init__.py  task.py  worker.py
app/engine/: __init__.py  compaction_manager.py  config.py  config.pyi  flush_pipeline.py  lsm_engine.py  lsm_engine.pyi  memtable_manager.py  seq_generator.py  sstable_manager.py  wal_manager.py
app/index/: __init__.py  sparse.py
app/memtable/: __init__.py  active.py  immutable.py  skiplist.py
app/observability/: log_server.py  logging.py
app/sstable/: __init__.py  meta.py  reader.py  registry.py  writer.py
app/tools/: __init__.py  logstream.py
app/wal/: writer.py
assets/: openapi.json
design/architecture/: index.html
design/async-io/: index.html
design/async-io-guidelines/: index.html
design/common-components/: index.html
design/compaction-manager/: index.html
design/compaction-spec/: index.html
design/comparison-leveldb-rocksdb/: index.html
design/flush-pipeline/: index.html
design/lsm-vs-btree/: index.html
design/memtable-impl/: index.html
design/memtable-manager/: index.html
design/parallel-flush/: index.html
design/read-write-flow/: index.html
design/sstable-format/: index.html
design/sstable-manager/: index.html
design/write-optimizations/: index.html
docs/: getting-started.md  index.md
docs/api/: abc.md  config.md  engine.md  errors.md  rest.md  types.md
docs/design/: architecture.md  async-io-guidelines.md  async-io.md  common-components.md  compaction-manager.md  compaction-spec.md  comparison-leveldb-rocksdb.md  flush-pipeline.md  lsm-vs-btree.md  memtable-impl.md  memtable-manager.md  parallel-flush.md  read-write-flow.md  sstable-format.md  sstable-manager.md  write-optimizations.md
docs/internals/: bloom.md  cache.md  compaction.md  flush.md  index.md  memtable.md  observability.md  sstable.md  wal.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Sidebar.tsx
frontend/src/pages/: Dashboard.tsx  EngineManager.tsx  Terminal.tsx
getting-started/: index.html
internals/: index.html
internals/bloom/: index.html
internals/cache/: index.html
internals/compaction/: index.html
internals/flush/: index.html
internals/memtable/: index.html
internals/observability/: index.html
internals/sstable/: index.html
internals/wal/: index.html
javascripts/: mermaid-zoom.js
scripts/: export_openapi.py
search/: search_index.json
stylesheets/: mermaid-zoom.css
tests/: conftest.py  test_block_cache.py  test_config.py  test_memtable_manager.py  test_skiplist.py  test_sparse_index.py  test_sstable_reader.py  test_sstable_writer.py  test_wal_manager.py
web/: server.py
web/routers/: compaction.py  config_routes.py  disk.py  engine.py  kv.py  mem.py  stats.py  terminal.py
web/ws/: logs.py
